# steelsearch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  checklist.md  docker-compose.rehearsal.yml  question.md  rust-toolchain.toml  tasks.md
.github/workflows/: source-compatibility.yml
crates/os-cluster-state/: Cargo.toml
crates/os-cluster-state/src/: lib.rs
crates/os-cluster-state/tests/: java_fixtures.rs  mixed_cluster_allocation_admission_fixture.rs
crates/os-core/: Cargo.toml
crates/os-engine/: Cargo.toml
crates/os-engine-tantivy/: Cargo.toml
crates/os-engine-tantivy/benchmarks/: deterministic_baselines.rs
crates/os-engine-tantivy/src/: lib.rs
crates/os-migration/: Cargo.toml
crates/os-ml-commons/: Cargo.toml
crates/os-node/: Cargo.toml
crates/os-node/src/: alias_mutation_route_registration.rs  alias_read_route_registration.rs  allocation_explain_route_registration.rs  bulk_route_registration.rs  cluster_settings_route_registration.rs  cluster_state_route_registration.rs  create_index_route_registration.rs  data_stream_route_registration.rs  delete_index_route_registration.rs  development_runtime.rs  get_index_route_registration.rs  head_index_route_registration.rs  legacy_template_route_registration.rs  lib.rs  main.rs  mapping_route_registration.rs  optimistic_concurrency_semantics.rs  pending_tasks_route_registration.rs  refresh_policy_semantics.rs  rollover_route_registration.rs  routing_semantics.rs  settings_route_registration.rs  single_doc_delete_route_registration.rs  single_doc_get_route_registration.rs  single_doc_post_route_registration.rs  single_doc_put_route_registration.rs  single_doc_update_route_registration.rs  snapshot_cleanup_route_registration.rs  snapshot_lifecycle_route_registration.rs  snapshot_repository_route_registration.rs  snapshot_restore_validation.rs  standalone_runtime.rs  stats_route_registration.rs  tasks_route_registration.rs  template_route_registration.rs  write_path_invariants.rs
crates/os-node/tests/: dev_cluster_daemons.rs  utoipa_poc.rs
crates/os-plugin-knn/: Cargo.toml
crates/os-query-dsl/: Cargo.toml
crates/os-rest/: Cargo.toml
crates/os-snapshot/: Cargo.toml
crates/os-stream/: Cargo.toml
crates/os-tcp-probe/: Cargo.toml
crates/os-tcp-probe/src/: main.rs
crates/os-transport/: Cargo.toml
crates/os-transport/src/: action.rs  compression.rs  error.rs  frame.rs  handshake.rs  internal_transport.rs  lib.rs  variable_header.rs
crates/os-transport/tests/: interop_accepted_transport_action_evidence.rs  interop_transport_action_inventory.rs  java_fixtures.rs  mixed_cluster_join_admission_fixture.rs  mixed_cluster_write_replication_fixture.rs
crates/os-wire/: Cargo.toml
docker/: docker-compose.replacement.yml
docs/api-spec/: README.md  document-and-bulk.md  document-write-semantic-gap-matrix.md  index-and-metadata.md  restricted-index-prefix-inventory.md  root-cluster-node.md  search-parameter-coverage-matrix.md  search.md  security-redaction-baseline.md  (+6 more)
tools/: alias_read_compat.py  alias_template_persistence_compat.py  allocation_explain_compat.py  attach-release-readiness-evidence.py  audit_runtime_route_ledger.py  build_runtime_route_backlog.py  bulk_compat.py  check-generated-api-spec.sh  check-rest-compat-report.py  check-security-redaction-smoke.sh  check-source-compatibility-drift.sh  check-startup-ordering-transcript.py  cluster_health_compat.py  cluster_settings_compat.py  cluster_state_compat.py  data_stream_rollover_compat.py  generate_api_spec_docs.py  index_lifecycle_compat.py  mapping_compat.py  migration_cutover_integration.py  ml_model_surface_compat.py  multi_node_transport_admin_integration.py  multi_node_write_path_integration.py  print-opensearch-classpath.init.gradle  probe_interop_bulk_forwarding_profile.sh  probe_interop_cluster_state_cache_profile.sh  probe_interop_handshake_profile.sh  probe_interop_read_forwarding_profile.sh  probe_interop_search_forwarding_profile.sh  probe_interop_write_forwarding_profile.sh  probe_mixed_cluster_allocation_profile.sh  probe_mixed_cluster_failure_profile.sh  probe_mixed_cluster_join_profile.sh  probe_mixed_cluster_recovery_profile.sh  probe_runtime_fields_source_profile.sh  probe_search_timeout_profile.sh  probe_stateful_route_ledger.py  refresh_compat.py  root_cluster_node_compat.py  routing_compat.py  (+48 more)
(+182 files in other folders)
