[workspace]
members = [
    "crates/os-core",
    "crates/os-wire",
    "crates/os-stream",
    "crates/os-transport",
    "crates/os-cluster-state",
    "crates/os-rest",
    "crates/os-query-dsl",
    "crates/os-engine",
    "crates/os-engine-tantivy",
    "crates/os-plugin-knn",
    "crates/os-ml-commons",
    "crates/os-snapshot",
    "crates/os-migration",
    "crates/os-node",
    "crates/os-tcp-probe",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/opensearch-project/OpenSearch"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
flate2 = "1"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
