[package]
name = "os-cluster-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
os-core = { path = "../os-core" }
os-stream = { path = "../os-stream" }
os-transport = { path = "../os-transport" }
os-wire = { path = "../os-wire" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
