[package]
name = "os-engine-tantivy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
os-engine = { path = "../os-engine" }
os-plugin-knn = { path = "../os-plugin-knn" }
os-query-dsl = { path = "../os-query-dsl" }
serde = { workspace = true }
serde_json.workspace = true

[[bench]]
name = "deterministic_baselines"
path = "benchmarks/deterministic_baselines.rs"
harness = false
