[package]
name = "os-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false
autotests = false

[features]
default = []
development-runtime = []

[[bin]]
name = "steelsearch"
path = "src/main.rs"
required-features = ["development-runtime"]

[[test]]
name = "dev_cluster_daemons"
path = "tests/dev_cluster_daemons.rs"
required-features = ["development-runtime"]

[dependencies]
bytes.workspace = true
os-cluster-state = { path = "../os-cluster-state" }
os-core = { path = "../os-core" }
os-engine = { path = "../os-engine" }
os-engine-tantivy = { path = "../os-engine-tantivy" }
os-ml-commons = { path = "../os-ml-commons" }
os-plugin-knn = { path = "../os-plugin-knn" }
os-rest = { path = "../os-rest" }
os-stream = { path = "../os-stream" }
os-transport = { path = "../os-transport" }
os-wire = { path = "../os-wire" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
