[package]
name = "os-tcp-probe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
humantime.workspace = true
os-core = { path = "../os-core" }
os-cluster-state = { path = "../os-cluster-state" }
os-stream = { path = "../os-stream" }
os-transport = { path = "../os-transport" }
os-wire = { path = "../os-wire" }
