[package]
name = "os-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
flate2.workspace = true
os-core = { path = "../os-core" }
os-stream = { path = "../os-stream" }
os-wire = { path = "../os-wire" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
base64.workspace = true
